# synapse

./: .gitignore  README.md
ai-ml/: .env.example  .gitignore  README.md  pyproject.toml
ai-ml/src/synapse_ai/: __init__.py  cli.py  config.py
ai-ml/src/synapse_ai/agent/: __init__.py  decision_classifier.py  orchestrator.py
ai-ml/src/synapse_ai/clients/: __init__.py  brave_search_client.py  openai_client.py
ai-ml/src/synapse_ai/retrieval/: __init__.py  retriever.py
ai-ml/src/synapse_ai/vectorstore/: __init__.py  store.py
ai-ml/tests/: __init__.py  conftest.py  test_brave_search_client.py  test_config.py  test_decision_classifier.py  test_openai_client.py  test_orchestrator.py  test_retriever.py  test_vectorstore.py
ai-ml/tests/fixtures/: sample_docs.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/synapse_backend/: __init__.py  api.py  app.py  config.py  orchestrator.py  views.py
backend/src/synapse_backend/services/: github_mcp_client.py  rts_client.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_github_mcp_client.py  test_rts_client.py  test_smoke.py
bot/: package.json
bot/src/: app.js  blocks.js  mock.js
frontend/: .gitignore  netlify.toml  package-lock.json  package.json
frontend/netlify/functions/: answer.js
frontend/src/: App.jsx
