[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-backend"
version = "0.1.0"
description = "Slack Bolt backend for Synapse — retrieval-augmented Q&A and decision detection"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.18,<2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5.0",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313", "py314"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
